django-oauthost changelog
=========================


Unreleased
----------
* Drop support for Python 3.5.


v1.1.0 [2019-12-07]
-------------------
! Dropped QA for Django 1.7.
! Dropped QA for Python 2.
+ Add Django 3.0 compatibility.


v1.0.0
------
! Dropped QA for Python 3.4.
* No functional changes. Celebrating 1.0.0.


v0.5.0
------
+ Django 2.0 basic compatibility.
* Dropped support for Python<3.4 and Django<1.7.


v0.4.0
------
+ Added Django 1.7+ config and migrations.
+ Added Russian localization.
* Django 1.8, 1.9, 1.10 adaptations
* Minor code improvements.


v0.3.0
------
+ Added Russian loco.
+ Added new param `redirect_uri` to `register_client()`.


v0.2.0
------
+ API refactored.
+ Implemented advanced scopes handling.
+ Added Scope status.
+ toolbox.register_client() is implemented.
* Fixed Django 1.6 import error in urls.py.
* `authorization_code` grant type now copies token scopes from code.


v0.1.0
------
+ Added Py3 support.
+ Added Django 1.5 custom user model support.
* Fixed auth session flushes in endpoint_authorize issues.


v0.0.3
------
+ Added support for custom URI schemes in redirection endpoints.
* Fixed Piston auth.


v0.0.2
------
+ API refactored.
+ New `synscopes` management command.
+ Added authentication helper class for Piston.
* Bearer token type fixes.


v0.0.1
------
+ Basic OAuth 2 functionality.