@@ -3,7 +3,7 @@ from random import randrange
 
 from django.conf import settings
 from django.db import models, IntegrityError
-from django.utils.translation import ugettext_lazy as _
+from django.utils.translation import gettext_lazy as _
 
 
 from .fields import URLSchemeField
